--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,28 @@
 .packages
 .pub/
 build/
+packages
+
 # Remove the following pattern if you wish to check in your lock file
 pubspec.lock
+
+# Files created by dart2js
+*.dart.js
+*.part.js
+*.js.deps
+*.js.map
+*.info.json
 
 # Directory created by dartdoc
 doc/api/
 
-# Extras
-*.swp
+# JetBrains IDEs
+.idea/
+*.iml
+*.ipr
+*.iws
+
 *~
+*.swp
+.DS_Store
 
