--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,13 +5,15 @@ homepage: https://www.github.com/Workiva/bender.dart
 author: George Lesica <george.lesica@workiva.com>
 
 environment:
-  sdk: '>=1.24.1 <2.0.0'
+  sdk: '>=1.24.1 <3.0.0'
 
 dependencies:
   logging: ^0.11.3
   meta: ^1.0.2
 
 dev_dependencies:
-  dart_dev: ^1.9.0
+  build_runner: ^0.9.0
+  build_test: ^0.10.2
+  build_web_compilers: ^0.4.0
   dart_style: ^1.0.7
-  test: ^0.12.33
+  test: ^1.0.0
