Update list of actions to match current Bendium

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -347,7 +347,7 @@ linter:
 
     # Sort constructor declarations before method declarations.
     # recommendation: optional
-    - sort_constructors_first
+    #- sort_constructors_first
 
     # Sort unnamed constructor declarations first.
     # recommendation: optional
